serverless config setup for offline run

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ AWS_ACCESS_KEY_ID=AKIA4MI2KAYKLTN4CLXJ
 AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=us-west-2
 USER=maneeshV
+PORT=4000
