--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "node-serverless",
   "version": "1.0.0",
   "description": "node application using lambda, dynamoDB and apigateway",
-  "main": "app.js",
   "scripts": {
-    "local": "serverless offline",
+    "local": "nodemon --exec npx serverless offline --stage local --watch handlers --watch controllers --watch serverless.yml --ext js,yml",
     "deploy:dev": "serverless deploy --stage dev",
     "deploy:test": "serverless deploy --stage test",
     "deploy:prod": "serverless deploy --stage prod",
@@ -17,16 +16,24 @@
     "@aws-sdk/client-dynamodb": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.699.0",
     "@aws-sdk/util-dynamodb": "^3.699.0",
+    "aws-sdk": "^2.1692.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "dynamoose": "^4.0.2",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
-    "nodemon": "^3.1.7",
+    "lodash": "^4.17.21",
+    "npx": "^10.2.2",
     "path": "^0.12.7",
-    "serverless-iam-roles-per-function": "^3.2.0"
+    "serverless-iam-roles-per-function": "^3.2.0",
+    "uuid": "^11.0.3",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "serverless": "^4.4.13",
+    "nodemon": "^3.1.7",
+    "serverless": "^3.39.0",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-offline": "^14.3.4"
   }
 }
